RESOLVED FIXED237446
Drag image from twitter is incorrect
https://bugs.webkit.org/show_bug.cgi?id=237446
Summary Drag image from twitter is incorrect
Oliver Hunt
Reported 2022-03-03 13:59:15 PST
When dragging an image from twitter the drag image is incorrect. The correct image is dragged, but the image used for the drag itself is wrong. Steps: 1. Go to https://twitter.com/dog_rates/status/1499168931671511045/photo/2 2. Click the preview image to get the full sized image 3. drag the image The drag image seems to be a rendering of the content of the side bar next to the image
Attachments
Wenson Hsieh
Comment 1 2022-03-04 09:24:27 PST
Interesting — seems to stop happening if I remove `draggable=true` from the (transparent) image element...
Radar WebKit Bug Importer
Comment 2 2022-03-10 14:00:16 PST
James Irwin
Comment 3 2022-11-16 20:32:55 PST
Abrar Rahman Protyasha
Comment 4 2023-12-07 21:43:42 PST
*** Bug 266025 has been marked as a duplicate of this bug. ***
Taher
Comment 5 2025-06-05 16:38:54 PDT
EWS
Comment 6 2025-06-11 20:27:25 PDT
Committed 296117@main (a3e5281daec2): <https://commits.webkit.org/296117@main> Reviewed commits have been landed. Closing PR #46395 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.