Drag snapshot paints unrelated content https://bugs.webkit.org/show_bug.cgi?id=237446 rdar://90120656

Reviewed by Simon Fraser.

When using setDragImage with a fixed-position element,
the drag preview bitmap incorrectly included content
from other stacking contexts.

During painting, we did not properly filter
layers based on subtreePaintRoot, causing unrelated
stacking context layers to be composited
into the dragged element's snapshot.

This fix ensures that only content layers within
the same stacking context are painted.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayer):
(WebCore::RenderLayer::paintLayerContents):

Canonical link: https://commits.webkit.org/296117@main